--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,50 +9,212 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="imgs/iconlogo.png">
 </head>
+
 <body>
-<!----------------------------------------------NAV/MENU-------------------------------------------------->
-    <nav>
-        <div class="menu">
-            <div class="menu-logo">
-                <a class="linklogo" href="index.html"><p class="logoec">Ecuador</p></a>
+    <!----------------------------------------------NAV/MENU-------------------------------------------------->
+    <!-- <nav class="menu">
+        <div class="menu-logo">
+            <a class="linklogo" href="index.html"><p class="logoec">Ecuador</p></a>
+        </div>
+        <div class="menu-items">
+            <div class="menu-item" id="item1"><a class="menu-link" href="index.html">Home</a></div>
+            <div class="menu-item" id="item2"><a class="menu-link" href="page2.html">About</a></div>
+            <div class="menu-item" id="item3"><a class="menu-link" href="page3.html">Destinations</a></div>
+            <div class="menu-item" id="item4"><a class="menu-link" href="page4.html">Gastronomy</a></div>
+            <div class="menu-item" id="item5"><a class="menu-link" href="page5.html">Adventure</a></div>
+        </div>
+    </nav> -->
+    <!----------------------------------------------HEROBANNER-------------------------------------------------->
+    <section class="herobanner">
+        <h1>Discover <span>Ecuador</span></h1>
+        <a href="#content1">V</a>
+    </section>
+    <!-- CONTENT 1 -->
+    <section class="content1" id="content1">
+        <div class="content1-text">
+            <h1>Lorem ipsum dolor</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos commodi eveniet soluta expedita nostrum
+                blanditiis sed minima dolorem veniam nemo!</p>
+        </div>
+        <div class="content1-img">
+            <img src="imgs/team4.jpg">
+            <img src="imgs/team4.jpg">
+            <img src="imgs/team4.jpg">
+            <img src="imgs/team4.jpg">
+        </div>
+    </section>
+    <a class="buttondown" href="#content2">V</a>
+    <!-- CONTENT 2 -->
+    <section class="content2" id="content2">
+        <div class="values">
+            <h1>Our values</h1>
+            <div class="ourvalues values1">
+                <hr class="separator">
+                <h2>Honesty</h2>
+                <p>We create products that we want to use ourselves every day.</p>
             </div>
-            <div class="menu-items">
-                <div class="menu-item" id="item1"><a class="menu-link" href="index.html">Home</a></div>
-                <div class="menu-item" id="item2"><a class="menu-link" href="page2.html">About Ecuador</a></div>
-                <div class="menu-item" id="item3"><a class="menu-link" href="page3.html">Destinations</a></div>
-                <div class="menu-item" id="item4"><a class="menu-link" href="page4.html">Gastronomy</a></div>
-                <div class="menu-item" id="item5"><a class="menu-link" href="page5.html">Adventure</a></div>
+            <div class="ourvalues values2">
+                <hr class="separator">
+                <h2>Originality</h2>
+                <p>We seek the finest natural sources and create our products with ingredients we find ourselves.</p>
+            </div>
+            <div class="ourvalues values3">
+                <hr class="separator">
+                <h2>Good quality</h2>
+                <p>We research ingredients in our own laboratory and investigate how to maximize the power of natural
+                    ingredients.</p>
+            </div>
+            <div class="ourvalues values4">
+                <hr class="separator">
+                <h2>Safety</h2>
+                <p>We partner with farmers who produce the best quality of sources sustainably.</p>
             </div>
         </div>
-    </nav>
-<!------------------------------------------MAIN BLOCK CONTAINER-------------------------------------------------->
-<section class="content1">
-        <!--------------------------------------BLOCK ONE---------------------------------------->
-        <div class="content-item1">
-            <h1 class="content-title">
-                Explore the Wonders of Ecuador: Unveiling Nature, Culture, and Adventure
-            </h1>
+    </section>
+    <a class="buttondown" href="#content3">V</a>
+    <!-- CONTENT 3 -->
+    <section class="content3" id="content3">
+        <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, voluptatibus!</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate itaque ex minima culpa porro ullam totam
+            velit! Est, culpa vitae. At necessitatibus iste provident? Rerum necessitatibus sed, numquam excepturi
+            impedit quo cum sint odio deserunt repudiandae vitae soluta adipisci. Repudiandae sit reprehenderit sed
+            beatae, sunt quis iure commodi dolorem possimus perspiciatis rerum, facilis adipisci ipsam magni laboriosam
+            modi accusantium debitis exercitationem accusamus sequi minima, in voluptatem. Nostrum, exercitationem aut
+            animi aspernatur quidem numquam facere cumque maiores aliquid assumenda, distinctio placeat natus sint
+            reiciendis optio aperiam dolores odit quia ut vitae sequi autem deleniti eaque? Nesciunt assumenda ratione
+            ut deleniti hic.</p>
+        <img src="imgs/amazon1.jpg">
+    </section>
+    <a class="buttondown" href="#content4">V</a>
+    <!-- CONTENT 4 -->
+    <section class="content4" id="content4">
+        <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, voluptatibus!</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate itaque ex minima culpa porro ullam totam
+            velit! Est, culpa vitae. At necessitatibus iste provident? Rerum necessitatibus sed, numquam excepturi
+            impedit quo cum sint odio deserunt repudiandae vitae soluta adipisci. Repudiandae sit reprehenderit sed
+            beatae, sunt quis iure commodi dolorem possimus perspiciatis rerum, facilis adipisci ipsam magni laboriosam
+            modi accusantium debitis exercitationem accusamus sequi minima, in voluptatem. Nostrum, exercitationem aut
+            animi aspernatur quidem numquam facere cumque maiores aliquid assumenda, distinctio placeat natus sint
+            reiciendis optio aperiam dolores odit quia ut vitae sequi autem deleniti eaque? Nesciunt assumenda ratione
+            ut deleniti hic.</p>
+        <img src="imgs/amazon1.jpg">
+    </section>
+    <a class="buttondown" href="#content5">V</a>
+    <!-- CONTENT 5 -->
+    <section class="content5" id="content5">
+        <div class="content5-text">
+            <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, voluptatibus!</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate itaque ex minima culpa porro ullam
+                totam
+                velit! Est, culpa vitae. At necessitatibus iste provident? Rerum necessitatibus sed, numquam excepturi
+                impedit quo cum sint odio deserunt repudiandae vitae soluta adipisci. Repudiandae sit reprehenderit sed
+                beatae, sunt quis iure commodi dolorem possimus perspiciatis rerum, facilis adipisci ipsam magni
+                laboriosam
+                modi accusantium debitis exercitationem accusamus sequi minima, in voluptatem. Nostrum, exercitationem
+                aut
+                animi aspernatur quidem numquam facere cumque maiores aliquid assumenda, distinctio placeat natus sint
+                reiciendis optio aperiam dolores odit quia ut vitae sequi autem deleniti eaque? Nesciunt assumenda
+                ratione
+                ut deleniti hic.</p>
         </div>
-        <!--------------------------------------BLOCK TWO---------------------------------------->
-        <div class="content-item2">
-            <h2 class="content-subtitle">Embark on a Journey of Discovery</h2>
-            <p class="content-paragraph">Welcome to our immersive journey through the wonders of Ecuador, where
-                adventure awaits at every turn! Explore the lush Amazon rainforest, the mystical Galapagos Islands, the
-                majestic Andean mountains, and the pristine Pacific Coast. Immerse yourself in the vibrant culture, rich
-                traditions, and mouthwatering gastronomy that make Ecuador truly unique. Indulge in thrilling outdoor
-                activities like surfing, whale watching, and sun-soaked beach escapades along the Pacific Coast.
-                Discover hidden gems, breathtaking landscapes, and the warm hospitality of the coastal communities. Join
-                us on this unforgettable exploration of Ecuador's diverse beauty and let your senses be captivated by
-                the Pacific Coast's stunning allure.</p>
+        <div class="slider5-container">
+        </div>
+    </section>
+    <a class="buttondown" href="#content6">V</a>
+    <!-- CONTENT 6 -->
+    <section class="content6" id="content6">
+        <div class="content6-text">
+            <h1>Lorem ipsum dolor adipisicing elit. Modi, voluptatibus!</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate itaque ex minima culpa porro ullam totam
+                velit! Est, culpa vitae. At necessitatibus iste provident? Rerum necessitatibus sed, numquam excepturi
+                </p>
+        </div>
+        <div class="content6-grid">
+            <div>
+                <img src="imgs/1.jpg">
+                <h2>Sample Text</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis quisquam voluptates impedit
+                    facere aspernatur, est assumenda cupiditate veniam nostrum.</p>
             </div>
-        </section>
-<!----------------------------------------------FOOTER-------------------------------------------------->
-        <footer>
-            <div class="footer">
-                <div class="footer-item" id="item-footer1"><a href="index.html">Home</a></div>
-                <div class="footer-item" id="item-footer2"><a href="page2.html">About</a></div>
-                <div class="footer-item" id="item-footer3"><a href="page3.html">Destinations</a></div>
+            <img class="grid6-span" src="imgs/map.png">
+            <div>
+                <img src="imgs/1.jpg">
+                <h2>Sample Text</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis quisquam voluptates impedit
+                    facere aspernatur, est assumenda cupiditate veniam nostrum.</p>
+            </div>
+            <div>
+                <img src="imgs/1.jpg">
+                <h2>Sample Text</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis quisquam voluptates impedit
+                    facere aspernatur, est assumenda cupiditate veniam nostrum.</p>
+            </div>
+            <div>
+                <img src="imgs/1.jpg">
+                <h2>Sample Text</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis quisquam voluptates impedit
+                    facere aspernatur, est assumenda cupiditate veniam nostrum.</p>
+            </div>
+            <div class="grid6-mid">
+                <img src="imgs/1.jpg">
+                <h2>Sample Text</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis quisquam voluptates impedit
+                    facere aspernatur, est assumenda cupiditate veniam nostrum.</p>
+            </div>
+        </div>
+    </section>
+    <a class="buttondown" href="#content7">V</a>
+    <!-- CONTENT 7 -->
+    <section class="content7" id="content7">
+        <h1>Sample Text</h1>
+        <div class="externals">
+            <div class="gallery item1">
+                <img class="gallery-img" src="imgs/1.jpg" alt="ingredient one">
+                <p class="link-text">Aloe</p>
+            </div>
+            <div class="gallery item2">
+                <img class="gallery-img" src="imgs/1.jpg" alt="ingredient two">
+                <p class="link-text">Licorice</p>
+            </div>
+            <div class="gallery item3">
+                <img class="gallery-img" src="imgs/1.jpg" alt="ingredient three">
+                <p class="link-text">Flaxseed</p>
+            </div>
+            <div class="gallery item4">
+                <img class="gallery-img" src="imgs/1.jpg" alt="ingredient four">
+                <p class="link-text">Calendula</p>
+            </div>
+            <div class="gallery item5">
+                <img class="gallery-img" src="imgs/1.jpg" alt="ingredient five">
+                <p class="link-text">Ginger</p>
+            </div>
+        </div>
+    </section>
+    <!-- <section class="content1">
+    <div class="content-item1">
+        <h1 class="content-title">
+            Explore the Wonders of Ecuador: Unveiling Nature, Culture, and Adventure
+        </h1>
+    </div>
+    <div class="content-item2">
+        <h2 class="content-subtitle">Embark on a Journey of Discovery</h2>
+        <p class="content-paragraph">Welcome to our immersive journey through the wonders of Ecuador, where
+            adventure awaits at every turn! Explore the lush Amazon rainforest, the mystical Galapagos Islands, the
+            majestic Andean mountains, and the pristine Pacific Coast. Immerse yourself in the vibrant culture, rich
+            traditions, and mouthwatering gastronomy that make Ecuador truly unique. Indulge in thrilling outdoor
+            activities like surfing, whale watching, and sun-soaked beach escapades along the Pacific Coast.
+            Discover hidden gems, breathtaking landscapes, and the warm hospitality of the coastal communities. Join
+            us on this unforgettable exploration of Ecuador's diverse beauty and let your senses be captivated by
+            the Pacific Coast's stunning allure.</p>
+        </div>
+    </section> -->
+    <footer>
+        <div class="footer">
+            <div class="footer-item" id="item-footer1"><a href="index.html">Home</a></div>
+            <div class="footer-item" id="item-footer2"><a href="page2.html">About</a></div>
+            <div class="footer-item" id="item-footer3"><a href="page3.html">Destinations</a></div>
         </div>
     </footer>
 </body>
+
 </html>
