my country responsive

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <!----------------------------------------------NAV/MENU-------------------------------------------------->
-    <!-- <nav class="menu">
+    <nav class="menu">
         <div class="menu-logo">
-            <a class="linklogo" href="index.html"><p class="logoec">Ecuador</p></a>
+            <a class="linklogo menu-link" href="index.html"><p class="logoec">Ecuador</p></a>
         </div>
         <div class="menu-items">
             <div class="menu-item" id="item1"><a class="menu-link" href="index.html">Home</a></div>
@@ -23,191 +23,179 @@
             <div class="menu-item" id="item4"><a class="menu-link" href="page4.html">Gastronomy</a></div>
             <div class="menu-item" id="item5"><a class="menu-link" href="page5.html">Adventure</a></div>
         </div>
-    </nav> -->
+    </nav>
     <!----------------------------------------------HEROBANNER-------------------------------------------------->
     <section class="herobanner">
         <h1>Discover <span>Ecuador</span></h1>
         <a href="#content1">V</a>
     </section>
     <!-- CONTENT 1 -->
-    <section class="content1" id="content1">
+    <section class="homecontent1" id="content1">
         <div class="content1-text">
-            <h1>Lorem ipsum dolor</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos commodi eveniet soluta expedita nostrum
-                blanditiis sed minima dolorem veniam nemo!</p>
+            <h1>Welcome to our immersive journey</h1>
+            <p>Welcome to our immersive journey through the wonders of Ecuador, where adventure awaits at every turn!
+                Explore the lush Amazon rainforest, the mystical Galapagos Islands, the majestic Andean mountains, and
+                the
+                pristine Pacific Coast. Immerse yourself in the vibrant culture, rich traditions, and mouthwatering
+                gastronomy that make Ecuador truly unique. Indulge in thrilling outdoor activities like surfing, whale
+                watching, and sun-soaked beach escapades along the Pacific Coast. Discover hidden gems, breathtaking
+                landscapes, and the warm hospitality of the coastal communities. Join us on this unforgettable
+                exploration
+                of Ecuador's diverse beauty and let your senses be captivated by the Pacific Coast's stunning allure.
+            </p>
         </div>
         <div class="content1-img">
-            <img src="imgs/team4.jpg">
-            <img src="imgs/team4.jpg">
-            <img src="imgs/team4.jpg">
-            <img src="imgs/team4.jpg">
+            <img src="imgs/coast1.jpg">
+            <img src="imgs/andes1.jpg">
+            <img src="imgs/amazon1.jpg">
+            <img src="imgs/galapagos1.jpg">
         </div>
     </section>
     <a class="buttondown" href="#content2">V</a>
     <!-- CONTENT 2 -->
-    <section class="content2" id="content2">
-        <div class="values">
-            <h1>Our values</h1>
-            <div class="ourvalues values1">
-                <hr class="separator">
-                <h2>Honesty</h2>
-                <p>We create products that we want to use ourselves every day.</p>
+    <section class="homecontent2" id="content2">
+        <div class="regions">
+            <div class="content2-text">
+                <h1>Discover Ecuador's Four Regions</h1>
+                <p>Ecuador is a country of remarkable diversity, comprising four distinct regions that offer unique
+                    experiences. Let's explore each region</p>
             </div>
-            <div class="ourvalues values2">
-                <hr class="separator">
-                <h2>Originality</h2>
-                <p>We seek the finest natural sources and create our products with ingredients we find ourselves.</p>
+            <div class="ourregions values1">
+                <h2>Coast</h2>
+                <p>Ecuador's coastal region offers stunning beaches, vibrant cities like Guayaquil, and delectable
+                    seafood. Explore the charming fishing villages of Manabí and enjoy thrilling water sports in
+                    destinations like Montañita.</p>
+                <img src="imgs/coast2.jpg">
             </div>
-            <div class="ourvalues values3">
-                <hr class="separator">
-                <h2>Good quality</h2>
-                <p>We research ingredients in our own laboratory and investigate how to maximize the power of natural
-                    ingredients.</p>
+            <div class="ourregions values2">
+                <h2>Highlands</h2>
+                <p>The Sierra region is home to the majestic Andean mountain range. Discover the historical charm of
+                    Quito, indulge in indigenous culture in Otavalo, and marvel at the beauty of the Quilotoa crater
+                    lake.</p>
+                <img src="imgs/andes2.jpg">
             </div>
-            <div class="ourvalues values4">
-                <hr class="separator">
-                <h2>Safety</h2>
-                <p>We partner with farmers who produce the best quality of sources sustainably.</p>
+            <div class="ourregions values3">
+                <h2>Amazon</h2>
+                <p>The oriente region provides access to the awe-inspiring Amazon rainforest. Immerse yourself in lush
+                    green landscapes, navigate the Napo River, and learn from indigenous communities.</p>
+                <img src="imgs/amazon2.jpg">
+            </div>
+            <div class="ourregions values4">
+                <h2>Galapagos Islands</h2>
+                <p>This pristine archipelago offers unparalleled wildlife encounters. Witness giant tortoises, marine
+                    iguanas, and swim with sea turtles in the crystal-clear waters. The Galapagos Islands are a haven
+                    for nature lovers.</p>
+                <img src="imgs/galapagos2.jpg">
             </div>
         </div>
     </section>
     <a class="buttondown" href="#content3">V</a>
     <!-- CONTENT 3 -->
-    <section class="content3" id="content3">
-        <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, voluptatibus!</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate itaque ex minima culpa porro ullam totam
-            velit! Est, culpa vitae. At necessitatibus iste provident? Rerum necessitatibus sed, numquam excepturi
-            impedit quo cum sint odio deserunt repudiandae vitae soluta adipisci. Repudiandae sit reprehenderit sed
-            beatae, sunt quis iure commodi dolorem possimus perspiciatis rerum, facilis adipisci ipsam magni laboriosam
-            modi accusantium debitis exercitationem accusamus sequi minima, in voluptatem. Nostrum, exercitationem aut
-            animi aspernatur quidem numquam facere cumque maiores aliquid assumenda, distinctio placeat natus sint
-            reiciendis optio aperiam dolores odit quia ut vitae sequi autem deleniti eaque? Nesciunt assumenda ratione
-            ut deleniti hic.</p>
-        <img src="imgs/amazon1.jpg">
-    </section>
-    <a class="buttondown" href="#content4">V</a>
-    <!-- CONTENT 4 -->
-    <section class="content4" id="content4">
-        <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, voluptatibus!</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate itaque ex minima culpa porro ullam totam
-            velit! Est, culpa vitae. At necessitatibus iste provident? Rerum necessitatibus sed, numquam excepturi
-            impedit quo cum sint odio deserunt repudiandae vitae soluta adipisci. Repudiandae sit reprehenderit sed
-            beatae, sunt quis iure commodi dolorem possimus perspiciatis rerum, facilis adipisci ipsam magni laboriosam
-            modi accusantium debitis exercitationem accusamus sequi minima, in voluptatem. Nostrum, exercitationem aut
-            animi aspernatur quidem numquam facere cumque maiores aliquid assumenda, distinctio placeat natus sint
-            reiciendis optio aperiam dolores odit quia ut vitae sequi autem deleniti eaque? Nesciunt assumenda ratione
-            ut deleniti hic.</p>
+    <section class="homecontent3" id="content3">
+        <h1>Adventure Awaits</h1>
+        <p>Adrenaline junkies, this slide is for you! Ecuador offers thrilling adventures for all levels. Get your heart
+            racing with hiking, biking, and zip-lining in the Andes. Or go white-water rafting in the Amazon. And for
+            the truly brave, try scaling the mighty Cotopaxi volcano!</p>
         <img src="imgs/amazon1.jpg">
     </section>
     <a class="buttondown" href="#content5">V</a>
     <!-- CONTENT 5 -->
-    <section class="content5" id="content5">
+    <section class="homecontent5" id="content5">
         <div class="content5-text">
-            <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, voluptatibus!</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate itaque ex minima culpa porro ullam
-                totam
-                velit! Est, culpa vitae. At necessitatibus iste provident? Rerum necessitatibus sed, numquam excepturi
-                impedit quo cum sint odio deserunt repudiandae vitae soluta adipisci. Repudiandae sit reprehenderit sed
-                beatae, sunt quis iure commodi dolorem possimus perspiciatis rerum, facilis adipisci ipsam magni
-                laboriosam
-                modi accusantium debitis exercitationem accusamus sequi minima, in voluptatem. Nostrum, exercitationem
-                aut
-                animi aspernatur quidem numquam facere cumque maiores aliquid assumenda, distinctio placeat natus sint
-                reiciendis optio aperiam dolores odit quia ut vitae sequi autem deleniti eaque? Nesciunt assumenda
-                ratione
-                ut deleniti hic.</p>
+            <h1>Geographical Marvels</h1>
+            <p>Brace yourselves for a rollercoaster ride of landscapes! Ecuador boasts the incredible diversity of the
+                Galapagos Islands, the mighty Amazon rainforest, stunning Andean peaks, and picturesque Pacific beaches.
+                It's like having multiple vacations in one place!</p>
+            <p>Calling all nature lovers! Ecuador is a haven for wildlife enthusiasts. Explore the Galapagos Islands,
+                where you can encounter unique species like giant tortoises, marine iguanas, and blue-footed boobies.
+                And don't forget the Amazon, home to colorful birds, playful monkeys, and elusive jaguars.</p>
         </div>
         <div class="slider5-container">
         </div>
     </section>
+    <a class="buttondown" href="#content4">V</a>
+    <!-- CONTENT 4 -->
+    <section class="homecontent4" id="content4">
+        <p>Step back in time as we explore Ecuador's colonial charm. Wander through the enchanting streets of Quito's
+            historic center, a UNESCO World Heritage site, with its impressive churches and charming plazas. Get lost in
+            the cobblestone alleys and soak in the architectural wonders. Immerse yourself in the colonial heritage of
+            Quito's historic center, where each step unveils a new story of Ecuador's past. Let the enchanting
+            architecture and atmosphere transport you to a bygone era of grandeur and charm.</p>
+        <h1>Enchanting Colonial Heritage</h1>
+        <img src="imgs/coast2.jpg">
+    </section>
     <a class="buttondown" href="#content6">V</a>
     <!-- CONTENT 6 -->
-    <section class="content6" id="content6">
+    <section class="homecontent6" id="content6">
         <div class="content6-text">
-            <h1>Lorem ipsum dolor adipisicing elit. Modi, voluptatibus!</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate itaque ex minima culpa porro ullam totam
-                velit! Est, culpa vitae. At necessitatibus iste provident? Rerum necessitatibus sed, numquam excepturi
-                </p>
+            <h1>What are you waiting for?</h1>
         </div>
         <div class="content6-grid">
-            <div>
-                <img src="imgs/1.jpg">
-                <h2>Sample Text</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis quisquam voluptates impedit
-                    facere aspernatur, est assumenda cupiditate veniam nostrum.</p>
+            <div class="grid6-bio">
+                <img src="imgs/pawprint.png">
+                <h2>Incredible Biodiversity</h2>
+                <p>Did you know that Ecuador holds a world record for biodiversity per square kilometer? Get ready to be
+                    amazed by the incredible flora and fauna that flourish in this small but mighty country. Ecuador is
+                    a nature lover's paradise like no other!</p>
             </div>
             <img class="grid6-span" src="imgs/map.png">
-            <div>
-                <img src="imgs/1.jpg">
-                <h2>Sample Text</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis quisquam voluptates impedit
-                    facere aspernatur, est assumenda cupiditate veniam nostrum.</p>
+            <div class="grid6-exp">
+                <img src="imgs/moments.png">
+                <h2>Unforgettable Experiences</h2>
+                <p>Prepare for unforgettable moments in Ecuador. Snorkel with sea turtles in the Galapagos, take a dip
+                    in the stunning waterfalls of Baños, or simply relax in the natural hot springs. These experiences
+                    will create memories that will last a lifetime.</p>
             </div>
-            <div>
-                <img src="imgs/1.jpg">
-                <h2>Sample Text</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis quisquam voluptates impedit
-                    facere aspernatur, est assumenda cupiditate veniam nostrum.</p>
+            <div class="grid6-taste">
+                <img src="imgs/restaurant.png">
+                <h2>A Taste of Ecuador</h2>
+                <p>Ecuadorian cuisine will tantalize your taste buds. Indulge in mouth-watering empanadas, savor the
+                    delicious flavors of roasted cuy (guinea pig), and treat yourself to the irresistible taste of
+                    helados de paila (handmade ice cream). Bon appétit!</p>
             </div>
-            <div>
-                <img src="imgs/1.jpg">
-                <h2>Sample Text</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis quisquam voluptates impedit
-                    facere aspernatur, est assumenda cupiditate veniam nostrum.</p>
+            <div class="grid6-fiesta">
+                <img src="imgs/confetti.png">
+                <h2>Cultural Fiesta</h2>
+                <p>From colorful indigenous markets to lively festivals, Ecuador knows how to celebrate. Discover the
+                    traditional music, mouth-watering cuisine (don't miss the ceviche!), and warm hospitality that will
+                    make you feel right at home.</p>
             </div>
             <div class="grid6-mid">
-                <img src="imgs/1.jpg">
-                <h2>Sample Text</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae corporis quisquam voluptates impedit
-                    facere aspernatur, est assumenda cupiditate veniam nostrum.</p>
+                <img src="imgs/adventure-game.png">
+                <h2>Adventure Awaits</h2>
+                <p>Adrenaline junkies, this slide is for you! Ecuador offers thrilling adventures for all levels. Get
+                    your heart racing with hiking, biking, and zip-lining in the Andes. Or go white-water rafting in the
+                    Amazon. And for the truly brave, try scaling the mighty Cotopaxi volcano!</p>
             </div>
         </div>
     </section>
     <a class="buttondown" href="#content7">V</a>
     <!-- CONTENT 7 -->
-    <section class="content7" id="content7">
-        <h1>Sample Text</h1>
+    <section class="homecontent7" id="content7">
+        <h1>Discover More Exciting Possibilities</h1>
         <div class="externals">
             <div class="gallery item1">
-                <img class="gallery-img" src="imgs/1.jpg" alt="ingredient one">
-                <p class="link-text">Aloe</p>
+                <img class="gallery-img" src="imgs/amazon3.jpg">
+                <p class="link-text">Wildlife</p>
             </div>
             <div class="gallery item2">
-                <img class="gallery-img" src="imgs/1.jpg" alt="ingredient two">
-                <p class="link-text">Licorice</p>
+                <img class="gallery-img" src="imgs/andes6.jpg">
+                <p class="link-text">Places</p>
             </div>
             <div class="gallery item3">
-                <img class="gallery-img" src="imgs/1.jpg" alt="ingredient three">
-                <p class="link-text">Flaxseed</p>
+                <img class="gallery-img" src="imgs/andes5.jpg">
+                <p class="link-text">Rainforest</p>
             </div>
             <div class="gallery item4">
-                <img class="gallery-img" src="imgs/1.jpg" alt="ingredient four">
-                <p class="link-text">Calendula</p>
+                <img class="gallery-img" src="imgs/coast2.jpg">
+                <p class="link-text">Heritage</p>
             </div>
             <div class="gallery item5">
-                <img class="gallery-img" src="imgs/1.jpg" alt="ingredient five">
-                <p class="link-text">Ginger</p>
+                <img class="gallery-img" src="imgs/coast3.jpg">
+                <p class="link-text">Sealife</p>
             </div>
         </div>
     </section>
-    <!-- <section class="content1">
-    <div class="content-item1">
-        <h1 class="content-title">
-            Explore the Wonders of Ecuador: Unveiling Nature, Culture, and Adventure
-        </h1>
-    </div>
-    <div class="content-item2">
-        <h2 class="content-subtitle">Embark on a Journey of Discovery</h2>
-        <p class="content-paragraph">Welcome to our immersive journey through the wonders of Ecuador, where
-            adventure awaits at every turn! Explore the lush Amazon rainforest, the mystical Galapagos Islands, the
-            majestic Andean mountains, and the pristine Pacific Coast. Immerse yourself in the vibrant culture, rich
-            traditions, and mouthwatering gastronomy that make Ecuador truly unique. Indulge in thrilling outdoor
-            activities like surfing, whale watching, and sun-soaked beach escapades along the Pacific Coast.
-            Discover hidden gems, breathtaking landscapes, and the warm hospitality of the coastal communities. Join
-            us on this unforgettable exploration of Ecuador's diverse beauty and let your senses be captivated by
-            the Pacific Coast's stunning allure.</p>
-        </div>
-    </section> -->
     <footer>
         <div class="footer">
             <div class="footer-item" id="item-footer1"><a href="index.html">Home</a></div>
