--- a/page2.html
+++ b/page2.html
@@ -17,7 +17,7 @@
             </div>
             <div class="menu-items">
                 <div class="menu-item" id="item1"><a class="menu-link" href="index.html">Home</a></div>
-                <div class="menu-item" id="item2"><a class="menu-link" href="page2.html">About Ecuador</a></div>
+                <div class="menu-item" id="item2"><a class="menu-link" href="page2.html">About</a></div>
                 <div class="menu-item" id="item3"><a class="menu-link" href="page3.html">Destinations</a></div>
                 <div class="menu-item" id="item4"><a class="menu-link" href="page4.html">Gastronomy</a></div>
                 <div class="menu-item" id="item5"><a class="menu-link" href="page5.html">Adventure</a></div>
